# gst-airplay

./: .gitignore  README.md  meson.build
examples/: player.py
src/: gstairplay.c  gstairplaysrc.c  gstairplaysrc.h
subprojects/: airplay.wrap
